crates/ndc-graphql/tests/snapshots/query_builder__Polymorphic Variables.snap
---
source: crates/ndc-graphql/tests/query_builder.rs
expression: operation.variables
---
{
  "arg_1_id": "acct-1"
}
