crates/ndc-graphql/tests/snapshots/query_builder__Query String@03_request_level_arguments.request.json.snap
---
source: crates/ndc-graphql/tests/query_builder.rs
assertion_line: 89
expression: operation.query
input_file: crates/ndc-graphql/tests/config-1/mutations/03_request_level_arguments.request.json
---
mutation($arg_1__set: Album_set_input, $arg_2_pk_columns: Album_pk_columns_input!) {
  procedure_0: update_Album_by_pk(_set: $arg_1__set, pk_columns: $arg_2_pk_columns) {
    AlbumId
    Title
  }
}
