crates/ndc-graphql/tests/snapshots/query_builder__Query String@05_request_level_arguments.request.json.snap
---
source: crates/ndc-graphql/tests/query_builder.rs
assertion_line: 70
expression: operation.query
input_file: crates/ndc-graphql/tests/config-1/queries/05_request_level_arguments.request.json
---
query {
  __value: Album {
    AlbumId
    Title
    Artist {
      ArtistId
      Name
    }
    Tracks {
      TrackId
      Name
      UnitPrice
      MediaType {
        Name
        MediaTypeId
      }
    }
  }
}
