crates/ndc-graphql/tests/snapshots/query_builder__Query String@06_scalar_coercion.request.json.snap
---
source: crates/ndc-graphql/tests/query_builder.rs
assertion_line: 74
expression: operation.query
input_file: crates/ndc-graphql/tests/config-1/queries/06_scalar_coercion.request.json
---
query($arg_1_limit: Int, $arg_2_where: Album_bool_exp) {
  __value: Album(limit: $arg_1_limit, where: $arg_2_where) {
    AlbumId
    Title
  }
}
