crates/ndc-graphql/tests/snapshots/query_builder__Variables@01_basic_query.request.json.snap
---
source: crates/ndc-graphql/tests/query_builder.rs
expression: operation.variables
input_file: crates/ndc-graphql/tests/config-3/queries/01_basic_query.request.json
---
{}
