crates/ndc-graphql/tests/snapshots/query_builder__Variables@01_single_operation.request.json.snap
---
source: crates/ndc-graphql/tests/query_builder.rs
expression: operation.variables
input_file: crates/ndc-graphql/tests/config-3/mutations/01_single_operation.request.json
---
{
  "arg_1__set": {
    "ArtistId": 1
  },
  "arg_2_pk_columns": {
    "AlbumId": 1
  }
}
