crates/ndc-graphql/tests/snapshots/query_builder__Variables@02_multiple_operations.request.json.snap
---
source: crates/ndc-graphql/tests/query_builder.rs
expression: operation.variables
input_file: crates/ndc-graphql/tests/config-3/mutations/02_multiple_operations.request.json
---
{
  "arg_1__set": {
    "ArtistId": 1
  },
  "arg_2_pk_columns": {
    "AlbumId": 1
  },
  "arg_3__set": {
    "ArtistId": 1
  },
  "arg_4_pk_columns": {
    "AlbumId": 1
  }
}
