crates/ndc-graphql/tests/snapshots/query_builder__Variables@03_child_node_parameters.request.json.snap
---
source: crates/ndc-graphql/tests/query_builder.rs
expression: operation.variables
input_file: crates/ndc-graphql/tests/config-3/queries/03_child_node_parameters.request.json
---
{
  "arg_1_limit": 20,
  "arg_2_where": {
    "AlbumId": {
      "_gt": 5
    }
  },
  "arg_3_limit": 5
}
